--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://krystianwojtowicz.github.io/ecommerce-react/",
+  "homepage": "https://krystianwojtowicz.github.io/shopping-cart_react/",
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
